--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -31,6 +31,11 @@ baixa_lancamento:
   controller: App\Controller\LancamentoController::atualiza
   methods:
     - POST
+repete_lancamento:
+  path: /repetelancamento
+  controller: App\Controller\LancamentoController::repete
+  methods:
+    - POST
 remove_lancamento:
   path: /lancamentos/{id}
   controller: App\Controller\LancamentoController::remove
